@@ -17,13 +17,13 @@
  */
 package com.graphhopper;
 
+import com.graphhopper.routing.util.WeightingMap;
 import com.graphhopper.util.Helper;
+import com.graphhopper.util.PMap;
 import com.graphhopper.util.shapes.GHPoint;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
-import java.util.Map;
 
 /**
  * GraphHopper request wrapper to simplify requesting GraphHopper.
@@ -35,7 +35,7 @@ public class GHRequest
 {
     private String algo = "";
     private List<GHPoint> points;
-    private final Map<String, Object> hints = new HashMap<String, Object>(5);
+    private final WeightingMap hints = new WeightingMap();
     private String vehicle = "";
     private boolean possibleToAdd = false;
     private Locale locale = Locale.US;
@@ -134,16 +134,13 @@ public class GHRequest
      */
     public GHRequest setWeighting( String w )
     {
-        if (w != null)
-        {
-            putHint("weighting", w);
-        }
+        hints.setWeighting(w);
         return this;
     }
 
     public String getWeighting()
     {
-        return getHint("weighting", "");
+        return hints.getWeighting();
     }
 
     /**
@@ -161,31 +158,6 @@ public class GHRequest
         return vehicle;
     }
 
-    public GHRequest putHint( String key, Object value )
-    {
-        hints.put(key, value);
-        return this;
-    }
-
-    @SuppressWarnings("unchecked")
-    public <T> T getHint( String key, T defaultValue )
-    {
-        Object obj = hints.get(key);
-        if (obj == null)
-            return defaultValue;
-
-        if (defaultValue != null && defaultValue instanceof Number)
-        {
-            // what a monster! see #173
-            if (defaultValue instanceof Double)
-                return (T) (Double) ((Number) obj).doubleValue();
-            if (defaultValue instanceof Long)
-                return (T) (Long) ((Number) obj).longValue();
-        }
-
-        return (T) obj;
-    }
-
     @Override
     public String toString()
     {
@@ -200,7 +172,7 @@ public class GHRequest
         return res + "(" + algo + ")";
     }
 
-    public Map<String, Object> getHints()
+    public WeightingMap getHints()
     {
         return hints;
     }
