@@ -18,8 +18,6 @@
 package com.graphhopper.routing.util;
 
 import com.graphhopper.util.EdgeIteratorState;
-import java.util.Collections;
-import java.util.Map;
 
 /**
  * Specifies how the best route is calculated. E.g. the fastest or shortest route.
@@ -45,12 +43,4 @@ public interface Weighting
      * +Infinity. Make sure your method does not return NaN which can e.g. occur for 0/0.
      */
     double calcWeight( EdgeIteratorState edgeState, boolean reverse, int prevOrNextEdgeId );
-
-    public static class Params
-    {
-        public static Map<String, Object> create( String weighting )
-        {
-            return Collections.singletonMap("weighting", (Object) weighting);
-        }
-    }
 }
